RESOLVED FIXED Bug 104364
[TexMap] Can not do multiple accelerated animations
https://bugs.webkit.org/show_bug.cgi?id=104364
Summary [TexMap] Can not do multiple accelerated animations
Allan Sandfeld Jensen
Reported 2012-12-07 05:18:30 PST
If you do CSS animation with keyframes that contain multiple properties that can be animated accelerated, only one of them will be actually animate, the other will stay at from value.
Attachments
Patch (4.54 KB, patch)
2012-12-07 05:22 PST, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-12-07 05:22:42 PST
WebKit Review Bot
Comment 2 2012-12-07 07:03:28 PST
Comment on attachment 178202 [details] Patch Clearing flags on attachment: 178202 Committed r136953: <http://trac.webkit.org/changeset/136953>
WebKit Review Bot
Comment 3 2012-12-07 07:03:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.