Source/WebCore/platform/graphics/GraphicsLayerAnimation.cpp
@@ -344,7 +344,7 @@ void GraphicsLayerAnimation::resume()
 void GraphicsLayerAnimations::add(const GraphicsLayerAnimation& animation)
 {
     // Remove the old state if we are resuming a paused animation.
-    remove(animation.name());
+    remove(animation.name(), animation.property());
 
     m_animations.append(animation);
 }
@@ -373,6 +373,14 @@ void GraphicsLayerAnimations::remove(const String& name)
 {
     for (int i = m_animations.size() - 1; i >= 0; --i) {
         if (m_animations[i].name() == name)
+            m_animations.remove(i);
+    }
+}
+
+void GraphicsLayerAnimations::remove(const String& name, AnimatedPropertyID property)
+{
+    for (int i = m_animations.size() - 1; i >= 0; --i) {
+        if (m_animations[i].name() == name && m_animations[i].property() == property)
             m_animations.remove(i);
     }
 }
